# rctp_fcst

./: .dockerignore  .gitignore  Dockerfile  build_tg_bot.sh  downloader.py  manage.sh  pyproject.toml  run_tg_bot.sh  start.sh  start_tg_bot.sh
bot/: tg_bot.py
